--- a/style/grid.css
+++ b/style/grid.css
@@ -1,7 +1,7 @@
 body {
     display: grid;
     grid-template-rows: 80px 1fr;
-    grid-template-columns: 15rem 1fr;
+    grid-template-columns: 240px 1fr;
 }
 
 header {
